<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module1_adjetives">


    <LinearLayout
        android:id="@+id/layoutAdjetivesConLosEditAValidar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:layout_gravity="right"
                app:srcCompat="@drawable/uleam" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="264dp"
                android:layout_height="59dp"
                android:layout_gravity="left"
                android:layout_margin="30dp"
                android:paddingTop="20dp"
                android:text="@string/title_activity_adjetives"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_margin="20dp"

            android:text="@string/large_text"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/angry"
                    app:srcCompat="@drawable/fast" />

                <EditText
                    android:id="@+id/editTextimageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/big" />

                <EditText
                    android:id="@+id/editTextimageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/fast" />

                <EditText
                    android:id="@+id/editTextimageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text"/>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/young" />

                <EditText
                    android:id="@+id/editTextimageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:textAlignment="center"
                    android:ems="10"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:textAlignment="center"
                    android:ems="10"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:textAlignment="center"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/joyful"
                    app:srcCompat="@drawable/joyful" />

                <EditText
                    android:id="@+id/editTextimageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:ems="10"
                    android:hint="@string/typerYourAnwser"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonAdjetives"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="send"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:layout_margin="20dp"/>

    </LinearLayout>

</ScrollView>